--- a/j2/as3_template.j2
+++ b/j2/as3_template.j2
@@ -38,7 +38,7 @@
     "webtls": {
       "certificates": [
           {
-            "certificates": "Certificate"
+            "certificate": "Certificate"
           }
       ],   
       "class": "TLS_Server"
